Add a srating star system

--- a/src/app/components/star-rating/star-rating.component.scss
+++ b/src/app/components/star-rating/star-rating.component.scss
@@ -1,15 +1,15 @@
 .star-rating {
-    display: inline-block;
-  }
-  
   .star {
     font-size: 24px;
-    color: #ccc;
+    color: white;
     cursor: pointer;
-    transition: color 0.2s;
+    transition: color 0.2s ease-in-out;
+    &.fa-star-half::before {
+      content: '\f089';
+      position: absolute;
+      width: 50%;
+      overflow: hidden;
+      color: white;
+    }
   }
-  
-  .star.filled {
-    color: gold;
-  }
-  
+}
