--- a/src/app/pages/create-promotions/create-promotions.component.scss
+++ b/src/app/pages/create-promotions/create-promotions.component.scss
@@ -3,6 +3,18 @@
   display: flex;
   justify-content: center;
 }
+.all-fields {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.promotion {
+  flex: 0 0 calc(33.33% - 20px);
+  margin: 10px;
+}
+
+/* Vous pouvez ajuster la largeur et les marges selon vos préférences */
+
 #toolbar {
   display: flex;
   justify-content: center;
