Promotion GetAll for Home

--- a/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.html
+++ b/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.html
@@ -26,6 +26,7 @@
           </div>
         </div>
       </div>
+      <!-- Ceci est la fin des carte promo -->
     </div>
   </div>
   <div class="all-promotions" *ngIf="promotions.length === 0">
