--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,19 +1,26 @@
-<!-- footer.component.html -->
+<footer class="footer-distributed">
+  <div class="footer-right">
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-github"></i></a>
+  </div>
 
-<!-- Footer -->
-<footer class="footer">
-  <!-- Contenu du footer -->
-  <div class="footer-links">
-    <!-- Lien GitHub 1 -->
-    <a class="footer-link" href="lien_vers_github_1" target="_blank">GitHub 1</a>
+  <div class="footer-left">
+    <p class="footer-links">
+      <a routerLink="/accueil">Accueil</a>
 
-    <!-- Lien GitHub 2 -->
-    <a class="footer-link" href="lien_vers_github_2" target="_blank">GitHub 2</a>
+      <a routerLink="/promotions">Promos</a>
 
-    <!-- Lien GitHub 3 -->
-    <a class="footer-link" href="lien_vers_github_3" target="_blank">GitHub 3</a>
+      <a routerLink="/discution">Discution</a>
 
-    <!-- Lien GitHub 4 -->
-    <a class="footer-link" href="lien_vers_github_4" target="_blank">GitHub 4</a>
+      <a routerLink="/commerce">Commerce</a>
+
+      <a routerLink="/dashboard">Dashboard</a>
+
+      <a routerLink="/contact">Contact</a>
+    </p>
+
+    <p>Brainwave &copy; 2023</p>
   </div>
 </footer>
