fix/header and filter

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,13 +8,13 @@
 
     <div class="menu" [ngClass]="{ open: isMenuOpen }">
       <ul>
-        <li><a routerLink="/accueil">Accueil</a></li>
+        <li><a routerLink="/">Accueil</a></li>
         <li><a routerLink="/promotions">Promos</a></li>
-        <li><a routerLink="/discution">Discution</a></li>
-        <li><a routerLink="/commerce">Commerce</a></li>
+        <li><a routerLink="/">Forum</a></li>
         <li><a routerLink="/dashboard">Dashboard</a></li>
-        <li><a routerLink="/contact">Contact</a></li>
+        <li><a routerLink="/">Contact</a></li>
         <li><a routerLink="/authentication">Connexion / Déco</a></li>
+        <img src="assets/images/Brain.png" alt="Image 2" class="menu-image" />
       </ul>
     </div>
   </div>
