--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,8 +6,10 @@ nav.header-container {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #6f42c1;
+  background: linear-gradient(180deg, #6f42c1 0%, #3b2269 100%);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: white;
+  z-index: 2;
 }
 
 .header-content {
@@ -22,7 +24,7 @@ nav.header-container {
   width: 30px;
   height: 20px;
   cursor: pointer;
-  z-index: 1;
+  z-index: 3;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -46,33 +48,52 @@ nav.header-container {
 }
 
 .menu {
-  position: absolute;
   top: 100%;
   right: 0;
-  background-color: #6f42c1;
   display: none;
   z-index: 2;
   width: 100%;
   transition: transform 0.3s ease-in-out;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .menu.open {
-  display: block;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: #6f42c1;
+  z-index: 1;
 }
 
 .menu ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 
 .menu li {
-  padding: 10px;
+  padding: 20px;
+  padding-left: 10vh;
+  display: flex;
+  align-items: center;
 }
 
 .menu li a {
   text-decoration: none;
   color: white;
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.menu-image {
+  width: 100px;
+  height: auto;
+  margin-top: 20px;
 }
 
 .icons {
@@ -90,7 +111,7 @@ nav.header-container {
 
 @media (min-width: 768px) {
   .menu-burger {
-    display: none; /* Cacher le menu burger */
+    display: none;
   }
 
   .header-content {
@@ -119,5 +140,8 @@ nav.header-container {
     text-decoration: none;
     color: white;
     font-size: 16px;
+  }
+  .menu-image {
+    display: none;
   }
 }
