fix/header and filter

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,9 @@
   </div>
 
   <div class="icons">
-    <div class="icon"><i class="fa fa-user"></i></div>
+    <a routerLink="/dashboard" class="icon">
+      <i class="fa fa-user"></i>
+    </a>
     <div class="icon"><i class="fa fa-envelope"></i></div>
     <div class="icon"><i class="fa fa-bell"></i></div>
   </div>
