--- a/src/app/components/dashboard/discussions/user-discussions/user-discussions.component.scss
+++ b/src/app/components/dashboard/discussions/user-discussions/user-discussions.component.scss
@@ -89,7 +89,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: start;
+        align-items: flex-start;
         .title {
             font-size: 18px;
             font-family: 'Montserrat', sans-serif;
