--- a/src/app/components/dashboard/user-informations/user-informations.component.scss
+++ b/src/app/components/dashboard/user-informations/user-informations.component.scss
@@ -37,7 +37,7 @@ p {
 .name-container {
     grid-area: 2 / 2 / 3 / 3;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .name-container p {
