--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,56 +4,70 @@
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 :root {
-  --violet: #6f42c1;
-  --turquoise: #17a2b8;
+    --violet: #6f42c1;
+    --turquoise: #17a2b8;
 }
 .ql-toolbar.ql-snow {
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-  padding: 8px;
-  background-color: var(--violet);
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    padding: 8px;
+    background-color: var(--violet);
 }
 
 .ql-snow.ql-toolbar button svg,
 .ql-snow .ql-toolbar button svg {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(351deg) brightness(104%) contrast(102%);
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(351deg) brightness(104%) contrast(102%);
 }
 
 .ql-snow.ql-toolbar button:hover svg,
 .ql-snow .ql-toolbar button:hover svg {
-  filter: invert(51%) sepia(63%) saturate(583%) hue-rotate(140deg) brightness(91%) contrast(90%);
+    filter: invert(51%) sepia(63%) saturate(583%) hue-rotate(140deg) brightness(91%) contrast(90%);
 }
 
 .ql-snow.ql-toolbar polyline.ql-stroke {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(351deg) brightness(104%) contrast(102%);
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(351deg) brightness(104%) contrast(102%);
 }
 
 .ql-snow.ql-toolbar polyline.ql-stroke:hover {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(351deg) brightness(104%) contrast(102%);
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(351deg) brightness(104%) contrast(102%);
 }
 
 span.ql-picker-label {
-  color: white;
+    color: white;
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 body {
-  margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  padding: 0;
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+    padding: 0;
+}
+
+// Colors
+
+$primary: #6f42c1;
+$secondary: #17a2b8;
+
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
