--- a/src/app/pages/manage-promotions/manage-promotions.component.scss
+++ b/src/app/pages/manage-promotions/manage-promotions.component.scss
@@ -1,3 +1,14 @@
+.button-create {
+  background-color: #6f42c1;
+  color: white;
+  margin: 20px 0px 0px 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .promotion-card-container {
   display: flex;
   flex-wrap: wrap;
