--- a/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.scss
+++ b/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.scss
@@ -75,7 +75,7 @@
     .header-card {
         img {
             width: 100%;
-            height: 70%;
+            height: 150px;
             border-radius: 5px;
             border: 0.3px solid black;
             box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -137,6 +137,10 @@
     }
     .header-promotions {
         width: 90%;
+      img {
+        max-height: 150px;
+        height: 150px;
+      }
     }
     .button-join-promotion {
         font-size: 14px;
@@ -145,6 +149,10 @@
     .title {
         font-size: 16px;
     }
+
+  .promo-card {
+    max-height: 100%;
+  }
 
     .show-more {
         width: 90%;
