--- a/src/app/pages/accueil/accueil.component.scss
+++ b/src/app/pages/accueil/accueil.component.scss
@@ -52,11 +52,12 @@ input[type='text'] {
 }
 
 // ---------------------------- carte  ----------------------------
-.all-promotions {
+.promotions-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  width: 80%;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -66,15 +67,17 @@ input[type='text'] {
   height: 260px;
   margin: 20px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
   .header-card {
     img {
       width: 100%;
-      height: 70%;
+      height: 150px;
       border-radius: 5px;
       border: 0.3px solid black;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
+
   .body-card {
     background-color: (var(--violet));
     color: white;
@@ -88,22 +91,27 @@ input[type='text'] {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
     .promotion-detail-container {
       display: flex;
       justify-content: flex-end;
+
       a {
         text-decoration: none;
         color: white;
       }
+
       .promotion-detail-button {
         width: 30%;
         display: flex;
         justify-content: space-evenly;
         cursor: pointer;
         margin-right: 10px;
+
         p {
           text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
         }
+
         img {
           width: 20px;
           height: 20px;
@@ -112,6 +120,7 @@ input[type='text'] {
         }
       }
     }
+
     p {
       margin: 0;
       font-size: 16px;
@@ -170,6 +179,7 @@ input[type='text'] {
   .show-more {
     width: 90%;
     font-size: 16px;
+
     p {
       width: 80px;
     }
