--- a/src/app/pages/create-promotions/create-promotions.component.scss
+++ b/src/app/pages/create-promotions/create-promotions.component.scss
@@ -6,14 +6,20 @@
 .all-fields {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .promotion {
-  flex: 0 0 calc(33.33% - 20px);
   margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  label {
+    width: 20%;
+  }
 }
-
-/* Vous pouvez ajuster la largeur et les marges selon vos préférences */
 
 #toolbar {
   display: flex;
@@ -21,11 +27,11 @@
   background-color: #f5f5f5;
   padding: 10px;
 }
-#input {
+input {
   margin-left: 0.5rem;
   border-color: #6f42c1;
   border-radius: 0.5rem;
-  padding-left: 0.5rem;
+  padding: 0.5rem;
 }
 #editor {
   margin: 1rem auto;
