--- a/src/app/pages/update-promotion/update-promotion.component.html
+++ b/src/app/pages/update-promotion/update-promotion.component.html
@@ -1,106 +1,119 @@
 <div class="card">
-<div *ngIf="promotion" class="promotion-details">
-  <!-- TODO conversion etoile en float -->
-  <!-- <p>{{ promotion.rating }}</p> -->
-  <div class="rating">
-    <app-star-rating [totalStars]="5" [rating]="3.5" (ratingChanged)="onRatingChanged($event)"></app-star-rating>
+    <div *ngIf="promotion" class="promotion-details">
+        <!-- TODO conversion etoile en float -->
+        <!-- <p>{{ promotion.rating }}</p> -->
+        <div class="rating">
+            <app-star-rating
+                [totalStars]="5"
+                [rating]="3.5"
+                (ratingChanged)="onRatingChanged($event)"
+            ></app-star-rating>
 
-      <button class="update-button" *ngIf="isVoteModified" (click)="saveVote()">Enregistrer le vote</button>
+            <button class="update-button" *ngIf="isVoteModified" (click)="saveVote()">Enregistrer le vote</button>
+        </div>
 
-  </div>
-
-  <!-- <div class="image-container">
+        <!-- <div class="image-container">
     <img [src]="getMediaUrlFromDescription(promotion.description)" alt="Promotion Image" />
   </div> -->
-  <div class="image-container">
-    <img [src]="getPromotionImageUrl()" alt="Promotion Image" />
-  </div>
-  
-  <h2 class="promo-title">{{ promotion.name }}</h2>
-
-  <div class="all-text">
-    <div class="tag">
-    <p >{{ promotion.tag }} </p></div>
-    <p> {{promotion.type}} . {{ promotion.difficulty }}</p>
-    <p>Auteur: {{ authorName }}</p>
-      <p>★ {{ promotion.rating }}</p>
-    <p>Date de création: {{ formatDate(promotion.creationDate) }}</p>
-  </div>
-
-  <div>
-    <div class="description-text" [innerHTML]="getSanitizedDescription(promotion.description)"></div>
-  </div>
-  <div class="delete">
-    <button class="update-button" (click)="onDeletePromotion(promotionId)">Supprimer la Promotion</button>
-  </div>
-  
-</div>
-  <div class="tabs">
-    <button class="tabs-button" [ngClass]="{ active: selectedTab === 'participants' }"
-      (click)="showTab('participants')">
-      Participants
-    </button>
-    <button class="tabs-button" [ngClass]="{ active: selectedTab === 'resources' }" (click)="showTab('resources')">
-      Ressources
-    </button>
-    <button class="tabs-button" [ngClass]="{ active: selectedTab === 'topics' }" (click)="showTab('topics')">
-      Discussions
-    </button>
-  </div>
-  
-<div class="background">
-  <div class="border">
-  <div class="participant">
-    <div *ngIf="selectedTab === 'resources'">
-      <p>Ressources:</p>
-      <ul>
-        <li *ngFor="let resource of resources">{{ resource.link }} {{ resource.title }}</li>
-      </ul>
-    </div>
-
-    <div *ngIf="selectedTab === 'topics'">
-      <p>Discussions:</p>
-      <ul>
-        <li *ngFor="let topic of topics">{{ topic.upvote }} {{ topic.title }}</li>
-      </ul>
-    </div>
-
-    <div *ngIf="selectedTab === 'participants'">
-      <div>
-        <p>Participants:</p>
-        <ul>
-          <li class="list" *ngFor="let participant of participantsMap">
-            {{ participant.firstname }} {{ participant.lastname }}
-            <button class="update-button" (click)="deleteParticipantFromPromotion(participant.id, promotion.authorId)">
-              Supprimer
-            </button>
-          </li>
-        </ul>
-      </div>
-
-      <h3>Ajouter des étudiants</h3>
-
-      <input type="text" [(ngModel)]="searchTerm" (input)="searchParticipants()" placeholder="Search participants" />
-      <ul *ngIf="showDropdown" class="search-results">
-        <li *ngFor="let participant of searchResults" (click)="selectUser(participant.id)">
-          {{ participant.firstname }} {{ participant.lastname }}
-        </li>
-      </ul>
-
-      <div class="selected-participants">
-        <h4>Participants sélectionnés :</h4>
-        <ul>
-          <li *ngFor="let participantId of addUsers">
-            {{ getParticipantName(participantId) }}
-          </li>
-        </ul>
-        <div class="buttonUpdate">
-          <button class="update-button" (click)="addParticipants()">Ajouter Participants</button>
+        <div class="image-container">
+            <img [src]="getPromotionImageUrl()" alt="Promotion Image" />
         </div>
-      </div>
+
+        <h2 class="promo-title">{{ promotion.name }}</h2>
+
+        <div class="all-text">
+            <div class="tag">
+                <p>{{ promotion.tag }}</p>
+            </div>
+            <p>{{ promotion.type }} . {{ promotion.difficulty }}</p>
+            <p>Auteur: {{ authorName }}</p>
+            <p>★ {{ promotion.rating }}</p>
+            <p>Date de création: {{ formatDate(promotion.creationDate) }}</p>
+        </div>
+
+        <div>
+            <div class="description-text" [innerHTML]="getSanitizedDescription(promotion.description)"></div>
+        </div>
+        <div class="delete">
+            <button class="update-button" (click)="onDeletePromotion(promotionId)">Supprimer la Promotion</button>
+        </div>
     </div>
-  </div>
+    <div class="tabs">
+        <button
+            class="tabs-button"
+            [ngClass]="{ active: selectedTab === 'participants' }"
+            (click)="showTab('participants')"
+        >
+            Participants
+        </button>
+        <button class="tabs-button" [ngClass]="{ active: selectedTab === 'resources' }" (click)="showTab('resources')">
+            Ressources
+        </button>
+        <button class="tabs-button" [ngClass]="{ active: selectedTab === 'topics' }" (click)="showTab('topics')">
+            Discussions
+        </button>
+    </div>
+
+    <div class="background">
+        <div class="border">
+            <div class="participant">
+                <div *ngIf="selectedTab === 'resources'">
+                    <p>Ressources:</p>
+                    <ul>
+                        <li *ngFor="let resource of resources">{{ resource.link }} {{ resource.title }}</li>
+                    </ul>
+                </div>
+
+                <div *ngIf="selectedTab === 'topics'">
+                    <p>Discussions:</p>
+                    <ul>
+                        <li *ngFor="let topic of topics">{{ topic.upvote }} {{ topic.title }}</li>
+                    </ul>
+                </div>
+
+                <div *ngIf="selectedTab === 'participants'">
+                    <div>
+                        <p>Participants:</p>
+                        <ul>
+                            <li class="list" *ngFor="let participant of participantsMap">
+                                {{ participant.firstname }} {{ participant.lastname }}
+                                <button
+                                    class="update-button"
+                                    (click)="deleteParticipantFromPromotion(participant.id, promotion.authorId)"
+                                >
+                                    Supprimer
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <h3>Ajouter des étudiants</h3>
+
+                    <input
+                        type="text"
+                        [(ngModel)]="searchTerm"
+                        (input)="searchParticipants()"
+                        placeholder="Search participants"
+                    />
+                    <ul *ngIf="showDropdown" class="search-results">
+                        <li *ngFor="let participant of searchResults" (click)="selectUser(participant.id)">
+                            {{ participant.firstname }} {{ participant.lastname }}
+                        </li>
+                    </ul>
+
+                    <div class="selected-participants">
+                        <h4>Participants sélectionnés :</h4>
+                        <ul>
+                            <li *ngFor="let participantId of addUsers">
+                                {{ getParticipantName(participantId) }}
+                            </li>
+                        </ul>
+                        <div class="buttonUpdate">
+                            <button class="update-button" (click)="addParticipants()">Ajouter Participants</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-</div>
-</div>
- 
